fixed layout issue

--- a/main.css
+++ b/main.css
@@ -190,7 +190,7 @@ body {
 
 /* TODO: fix clock icon on device of s5 */
 
-@media (max-width: 760px) {
+/*@media (max-width: 760px) {
     /*.task-result{
     width: 100%;
     }
@@ -199,4 +199,4 @@ body {
         margin: 20px;
     }*/
 
- }
+ 
